Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 1.3
-
None
-
None
Description
If someone is running using JDBC w/o Kerberos and does not specify a username, it is possible that the "user" field will be empty. This causes a Precondition failure in the Admission Controller RequestPoolService.
I0318 16:42:36.781626 11198 jni-util.cc:177] java.lang.IllegalArgumentException at com.google.common.base.Preconditions.checkArgument(Preconditions.java:72) at com.cloudera.impala.util.RequestPoolService.assignToPool(RequestPoolService.java:343) at com.cloudera.impala.util.RequestPoolService.resolveRequestPool(RequestPoolService.java:257)